# turbo-dash

./: .gitignore  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  server_wallet.json
client/: pnpm-lock.yaml
client/public/: bundle.min.js
program/: Anchor.toml  README.md  admin.json  buffer_keypair.json  package.json  payer.json  pnpm-lock.yaml
program/programs/turbodash/: Cargo.toml
program/programs/turbodash/src/: errors.rs  lib.rs  utils.rs
program/scripts/: create-contest.ts  init-program.ts  turbodash-cli.ts
program/tests/: turbodash.ts
public/: index.html
src/app/: actions.ts  globals.css  layout.tsx  manifest.json  page.tsx
src/app/api/all-contests/: route.ts
src/app/api/claim-prize/: route.ts
src/app/api/eth-price/: route.ts
src/app/api/join-contest/: route.ts
src/app/api/latest-contest/: route.ts
src/app/api/leaderboard/: route.ts
src/app/api/record-progress/: route.ts
src/app/api/refill-lives/: route.ts
src/app/hooks/: useCapsule.ts
src/client/: para.tsx
src/components/: claim-button.tsx  correct-size-overlay.tsx  counter.tsx  diagnostics.tsx  game.tsx  leaderboard.tsx  main-menu.tsx  modals.tsx  pixelated-card.tsx  preloader.tsx  season.tsx  toast.tsx  wallet-state.tsx
src/config/: env.ts  idl.ts
src/game/: assets.ts  main.ts  phaser-game.tsx
src/game/scenes/: Boot.ts  Game.ts  MainMenu.ts  Preloader.ts
src/hooks/: useCapsule.ts
src/stores/: useCapsuleStore.ts
src/utils/: common.ts  pdas.ts  transactions.ts
